apps/karakeep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep-web-ingress
  namespace: karakeep
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: keep.cl.flylab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
